<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChronStats</string>
    <string name="action_signout">Se déconnecter</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_title">Authentification</string>
    <string name="username">Utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="send_login">Envoyer…</string>
    <string name="process_login">En cours&#8230;</string>
    <string name="edit_title">Edition</string>
    <string name="edit_button">Modifier</string>
    <string name="delete_button">Supprimer</string>
    <string name="add_title">Ajout</string>
    <string name="add_button">Ajouter</string>
    <string name="addMatch_button">Ajouter un match</string>
    <string name="title_activity_team_list">TeamListActivity</string>
    <string name="SERVER_URL">http://chron-stats.herokuapp.com/</string>
    <string name="JSON_EXT">.json</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_matches_list">MatchesListActivity</string>
    
    <!-- Affichage time keeping -->
    
    <string name="action_terminate">Terminer Match</string>
    <string name="numero">No</string>
    <string name="name">Nom</string>
    <string name="goal">But</string>
    <string name="deuxMin">2min</string>
    <string name="tps">Tps</string>
    <string name="penalty">Penalty</string>
    <string name="card">Carton</string>
    <string name="resumeTeam1">Résumé Equipe 1</string>
    <string name="resumeTeam2">Résumé Equipe 2</string>
    <string name="deuxMinProgress">2min en cours</string>
    <string name="playPause">Play / Pause</string>
    <string name="correction">Correction</string>
    <string name="matchNotStarted">Match non commencé</string>
    <string name="timekeeping_button">Romain!</string>
    <string name="title_activity_match_details">MatchDetailsActivity</string>
    <string name="title_activity_add_match">AddMatchActivity</string>
    <string name="empty_list">Aucun élément</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Annuler</string>
    <string name="already_created_dialog_title">Match déjà créé</string>
    <string name="already_created_dialog_message">Ce match a déjà été créé, veuillez en choisir un autre.</string>
    <string name="confirm_dialog_title">Confirmer?</string>
    <string name="confirm_dialog_message">Êtes-vous sûr de vouloir créer le match sélectionné?</string>
    <string name="opponent_team">Équipe adverse</string>
    <string name="date">Date / heure</string>
    <string name="gym">Salle</string>
    <string name="status">Status</string>
    <string name="send_button">Envoyer</string>
    <string name="launch_button">Démarrer</string>
    <string name="yellow_card">Carton Jaune</string>
    <string name="red_card">Carton Rouge</string>
    

</resources>
