<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MatchDetailsActivity" >
    
     <TextView
          android:id="@+id/match_sheet_title"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="30sp"
          android:padding="20dp"
          android:gravity="center"
          android:textColor="@color/white"
          android:background="@color/brown"
          android:textStyle="bold" />
     
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="Voici les détails de la feuille de match"
        android:textSize="20sp" 
        android:gravity="left"
        android:layout_marginTop="75dp"/>

    <LinearLayout
        android:id="@+id/detail_main_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/match_sheet_title"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right|center_vertical"
            android:orientation="vertical"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/match_sheet_opponent_team_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opponent_team" />

            <TextView
                android:id="@+id/match_sheet_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/match_sheet_gym_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gym" />

            <TextView
                android:id="@+id/match_sheet_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/match_sheet_opponent_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/match_sheet_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/match_sheet_gym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/match_sheet_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:baselineAligned="true"
		android:orientation="horizontal" >

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_button"
            android:background="@color/brown"
            android:padding="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_button"
            android:background="@color/brown"
            android:padding="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/launch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/launch_button"
            android:background="@color/brown"
            android:padding="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />
        
    </LinearLayout>

</RelativeLayout>