<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TestLoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:background="@drawable/login_border"
		    android:orientation="vertical"
		    android:weightSum="3" >

		    <!-- Nom d'utilisateur -->
		
		    <EditText
		        android:id="@+id/editText_username"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_marginTop="4dp"
		        android:hint="@string/username"
		        android:inputType="text|textNoSuggestions"
		        android:maxEms="10"
		        android:minEms="10"
		        android:textSize="20sp" >
		
		        <requestFocus />
		    </EditText>
		
		    <!-- Mot de passe -->
		
		    <EditText
		        android:id="@+id/editText_password"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_marginTop="4dp"
		        android:hint="@string/password"
		        android:imeOptions="actionSend"
		        android:inputType="textPassword"
		        android:maxEms="10"
		        android:minEms="10"
		        android:textSize="20sp" />
		
		    <!-- Bouton d'envoi -->
		
		    <Button
		        android:id="@+id/button_sendLogin"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="4dp"
		        android:text="@string/send_login" />
        </LinearLayout>
    </ScrollView>

</merge>